--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <p>This is a new repo.</p>
 <p>This is a feature (dropdown)</p>
-<p>This is a feature (button)</p>
-
+<p>This is an extra paragraph</p>
 
 
